changelog: 1. Note Color

--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -127,4 +127,6 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
+    <include layout="@layout/layout_miscellaneous" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
