changelog: 1. Add image in note

--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -105,6 +105,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/input_note_subtitle" />
 
+            <ImageView
+                android:id="@+id/image_note"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/image"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@+id/input_note_subtitle" />
+
             <EditText
                 android:id="@+id/input_note"
                 android:layout_width="match_parent"
@@ -123,7 +135,7 @@
                 android:textColorHint="@color/colorTextHint"
                 android:textSize="@dimen/_13ssp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/input_note_subtitle" />
+                app:layout_constraintTop_toBottomOf="@id/image_note" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
