--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_note"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -8,6 +9,15 @@
     android:background="@drawable/background_note"
     android:orientation="vertical">
 
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/image_note"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:adjustViewBounds="true"
+        android:visibility="gone"
+        app:riv_corner_radius_top_left="@dimen/_10sdp"
+        app:riv_corner_radius_top_right="@dimen/_10sdp" />
+    
     <TextView
         android:id="@+id/text_title"
         android:layout_width="match_parent"
@@ -37,6 +47,6 @@
         android:layout_marginEnd="@dimen/_8sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:textColor="@color/colorNoteSubtitleText"
-        android:textSize="@dimen/_7ssp"/>
+        android:textSize="@dimen/_7ssp" />
 
 </LinearLayout>
