--- a/app/src/main/res/layout/layout_miscellaneous.xml
+++ b/app/src/main/res/layout/layout_miscellaneous.xml
@@ -153,7 +153,7 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:contentDescription="@string/add_image_icon"
-            android:src="@drawable/ic_photo_add"
+            android:src="@drawable/ic_add_photo"
             app:tint="@color/colorIcons" />
 
         <TextView
@@ -180,7 +180,7 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:contentDescription="@string/add_image_icon"
-            android:src="@drawable/ic_globe"
+            android:src="@drawable/ic_url"
             app:tint="@color/colorIcons" />
 
         <TextView
@@ -188,6 +188,33 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_10sdp"
             android:text="Add URL"
+            android:textColor="@color/colorIcons"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_add_checklist"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_margin="@dimen/_10sdp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:contentDescription="@string/add_image_icon"
+            android:src="@drawable/ic_checklist"
+            app:tint="@color/colorIcons" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:text="Add Checklist"
             android:textColor="@color/colorIcons"
             android:textSize="@dimen/_12sdp"
             android:textStyle="normal" />
