--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorPrimaryDark"
     tools:context=".activities.CreateNoteActivity">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="@dimen/_40sdp"
@@ -68,7 +68,7 @@
                 android:id="@+id/text_data_and_time"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/colorTextColor"
+                android:textColor="@color/colorText2"
                 android:textSize="@dimen/_10ssp"
                 app:layout_constraintEnd_toEndOf="@id/input_note_title"
                 app:layout_constraintStart_toStartOf="@id/input_note_title"
@@ -179,14 +179,19 @@
                 android:hint="@string/type_note_here"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
-                android:minHeight="@dimen/_100sdp"
                 android:textColor="@color/colorTextColor"
                 android:textColorHint="@color/colorTextHint"
                 android:textSize="@dimen/_13ssp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/todo_recyclerview"
                 app:layout_constraintTop_toBottomOf="@id/layout_web_url" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/todo_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/input_note" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <include layout="@layout/layout_miscellaneous" />
 
