--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -65,13 +65,22 @@
                 app:layout_constraintTop_toBottomOf="@id/image_back" />
 
             <TextView
-                android:id="@+id/text_data_and_time"
-                android:layout_width="0dp"
+                android:id="@+id/text_date"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/colorText2"
                 android:textSize="@dimen/_10ssp"
-                app:layout_constraintEnd_toEndOf="@id/input_note_title"
                 app:layout_constraintStart_toStartOf="@id/input_note_title"
+                app:layout_constraintTop_toBottomOf="@id/input_note_title" />
+
+            <TextView
+                android:id="@+id/text_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:textColor="@color/colorText2"
+                android:textSize="@dimen/_10ssp"
+                app:layout_constraintStart_toEndOf="@id/text_date"
                 app:layout_constraintTop_toBottomOf="@id/input_note_title" />
 
             <EditText
@@ -93,7 +102,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/view_subtitle_indicator"
-                app:layout_constraintTop_toBottomOf="@id/text_data_and_time" />
+                app:layout_constraintTop_toBottomOf="@id/text_date" />
 
             <View
                 android:id="@+id/view_subtitle_indicator"
