--- a/app/src/main/res/layout/item_container_note.xml
+++ b/app/src/main/res/layout/item_container_note.xml
@@ -25,6 +25,7 @@
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
+        android:maxLines="2"
         android:textColor="@color/colorTextColor"
         android:textSize="@dimen/_15ssp"
         android:textStyle="bold" />
@@ -36,24 +37,72 @@
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_2sdp"
         android:layout_marginEnd="@dimen/_10sdp"
+        android:maxLines="8"
         android:textColor="@color/colorText2"
         android:textSize="@dimen/_12ssp" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/todo_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone" />
-
     <TextView
-        android:id="@+id/text_date_time"
+        android:id="@+id/text_note"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_2sdp"
         android:layout_marginEnd="@dimen/_10sdp"
-        android:layout_marginBottom="@dimen/_10sdp"
+        android:maxLines="8"
         android:textColor="@color/colorText2"
-        android:textSize="@dimen/_7ssp" />
+        android:textSize="@dimen/_12ssp" />
 
+    <TextView
+        android:id="@+id/text_delete_note"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_2sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
+        android:maxLines="8"
+        android:textColor="@color/colorText2"
+        android:textSize="@dimen/_12ssp"
+        android:visibility="gone" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/todo_recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:visibility="gone" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/text_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:background="@drawable/background_label"
+            android:padding="@dimen/_5sdp"
+            android:text="Notes"
+            android:textColor="@color/colorText3"
+            android:textSize="@dimen/_8ssp" />
+
+        <TextView
+            android:id="@+id/text_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            android:layout_marginBottom="@dimen/_8sdp"
+            android:paddingStart="0dp"
+            android:paddingEnd="@dimen/_10sdp"
+            android:textAlignment="textEnd"
+            android:textColor="@color/colorText2"
+            android:textSize="@dimen/_7ssp" />
+    </LinearLayout>
 </LinearLayout>
