changelog: 1. Quick option for checklist

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,7 +5,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="fontFamily">@font/kumbh_sans</item>
+        <item name="fontFamily">@font/coresans</item>
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
     </style>
 
