changelog: 1. Share Note from note editing 2. Bug Fixes

--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -54,6 +54,7 @@
                 android:layout_marginTop="@dimen/_15sdp"
                 android:layout_marginEnd="@dimen/_12sdp"
                 android:background="@null"
+                android:fontFamily="@font/boubaround_bold"
                 android:hint="Note Title"
                 android:imeOptions="actionDone"
                 android:importantForAutofill="no"
@@ -91,6 +92,7 @@
                 android:layout_marginTop="@dimen/_15sdp"
                 android:layout_marginEnd="@dimen/_12sdp"
                 android:background="@null"
+                android:fontFamily="@font/boubaround_medium"
                 android:hint="@string/subtitle"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
