--- a/app/src/main/res/layout/layout_miscellaneous.xml
+++ b/app/src/main/res/layout/layout_miscellaneous.xml
@@ -180,6 +180,7 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:contentDescription="@string/add_image_icon"
+            android:padding="@dimen/_2sdp"
             android:src="@drawable/ic_url"
             app:tint="@color/colorIcons" />
 
@@ -207,6 +208,7 @@
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:contentDescription="@string/add_image_icon"
+            android:padding="@dimen/_1sdp"
             android:src="@drawable/ic_checklist"
             app:tint="@color/colorIcons" />
 
@@ -220,6 +222,36 @@
             android:textStyle="normal" />
 
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layout_share_note"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_margin="@dimen/_10sdp"
+        android:gravity="center_vertical"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        tools:ignore="UseCompoundDrawables">
+
+        <ImageView
+            android:layout_width="@dimen/_20sdp"
+            android:layout_height="@dimen/_20sdp"
+            android:contentDescription="@string/add_image_icon"
+            android:padding="@dimen/_1sdp"
+            android:src="@drawable/ic_share"
+            app:tint="@color/colorIcons" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:text="Share Note"
+            android:textColor="@color/colorIcons"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="normal" />
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:id="@+id/layout_delete_note"
